Fix our work H3 spacing
Also required fixing the div layout for the banners

--- a/src/scss/pages/_work.scss
+++ b/src/scss/pages/_work.scss
@@ -92,27 +92,35 @@
   }
   .images {
     margin-top: 30px;
-    h3 {
-      font-size: 36px;
-      font-weight: 700;
-      padding: 8px 0;
-      position: absolute;
-      margin-top: 0;
-      text-align: center;
-      text-transform: uppercase;
+
+    .banner {
       top: 0;
       left: 0;
       width: 100%;
       background: rgba(26,54,58,0.8);
-      color: #fff;
+      position: absolute;
+      padding: 8px 0;
+      margin-top: 0;
+      h3 {
+        font-size: 36px;
+        font-weight: 700;
+        margin: 0;
+        margin-top: 4px;
+        text-align: center;
+        text-transform: uppercase;
+        color: #fff;
+      }
     }
+
     .imgContainer {
       position: relative;
-      margin: 0 5px;
       flex: 1 50%;
       img {
-        max-width: 100%;
+        width: 100%;
       }
+    }
+    .beforeimg {
+      margin-right: 25px;
     }
   }
 }
